Kubernetes/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      securityContext:
        runAsUser: 1
#        runAsGroup: 0
        fsGroup: 0
      containers:
#      - image: luxurai.azurecr.io/wordpress-nginx:latest
      - image: bitnami/wordpress-nginx:latest
        imagePullPolicy: Always
        name: wordpress
        ports:
        - containerPort: 8443
        - containerPort: 8080
          name: wordpress
        volumeMounts:
        - name: wordpress-data
          mountPath: /bitnami/wordpress
      volumes:
      - name: wordpress-data
        persistentVolumeClaim:
          claimName: wordpress
      imagePullSecrets:
      - name: luxurai-auth
