Kubernetes/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  ports:
  - port: 3306
    targetPort: 3306
    name: mariadb
    protocol: TCP
#    nodePort: 31161
  selector:
    app: mariadb
