Kubernetes/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
#    cert-manager.io/acme-challenge-type: http01
#    kubernetes.io/tls-acme: "true"
#    acme.cert-manager.io/http01-edit-in-place: "true"
#    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 80m
#    acme.cert-manager.io/http01-ingress-class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - yo.net
    secretName: yonet-tls-2048
  rules:
   - host: yo.net
     http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
